# OpenCarnivores

./: .claudeignore  .gitignore  ARCHITECTURE.md  AUDIO.md  Audio.cpp  Audio_DLL.cpp  Audio_OpenAL.cpp  Audio_SDL.cpp  BUILD_REQUIREMENTS.md  Bindings.cpp  Bindings.h  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Characters.cpp  CustomMaterials.cpp  CustomMaterials.h  DataDefs.cpp  DataDefs.h  Game.cpp  Gamepad.cpp  Gamepad.h  HotReload.cpp  HotReload.h  Hunt.h  Hunt2.cpp  Interface.cpp  Loading.cpp  Materials.cpp  Materials.h  Menu.cpp  ModelOverrides.cpp  ModelOverrides.h  OpenCarnivores.sln  OpenCarnivores.vcxproj  OpenCarnivores.vcxproj.filters  README.md  RENDERING.md  ROADMAP.md  Render3DFX.cpp  (+23 more)
.github/workflows/: release.yml
HUNTDAT/: _RES.TXT
code analysis/: OpenCarnivores Code Analysis.xlsx  Sheet1.html
compat/: d3d.h  ddraw.h  dxguids.cpp
docs/: dinos.example.json  weapons.example.json
renderer/: PostProcessing.cpp  PostProcessing.h  Renderer.h  RendererGL.cpp  RendererGL.h
scripts/: example.lua
shaders/: basic.frag  basic.vert  custom_tint.frag  custom_tint.vert  example.material
shaders/postprocess/: bloom.frag  bloom_blur_h.frag  bloom_blur_v.frag  bloom_threshold.frag  desaturate.frag  quad.vert  shadows.frag  ssr.frag  tonemap.frag
